--- a/main.yml
+++ b/main.yml
@@ -3,5 +3,8 @@
 - hosts: all
   become: no
   tasks:
-    - debug:
-        var: ansible_facts.distribution_major_version
+  - name: line
+    ansible.builtin.lineinfile:
+      path: /tmp/semaphore.log
+      line: This was run by semaphore at {{ ansible_date_time.iso8601 }}
+
